public/assets/style/style.scss
$primary_color: #1faaff;
$secondary_color: #000000;
@mixin breakpoint($class) {
    @if $class==xs {
        @media (max-width: 767px) {
            @content;
        }
    } @else if $class==sm {
        @media (max-width: 768px) {
            @content;
        }
    } @else if $class==md {
        @media (max-width: 992px) {
            @content;
        }
    } @else if $class==lg {
        @media (max-width: 1200px) {
            @content;
        }
    } @else {
        @warn "Breakpoint mixin supports: xs, sm, md, lg";
    }
}

* {
    font-family: "Lato", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    //background: #f9f9fa;
    margin: 0;
    padding: 0;
    width: 100%;
    overflow-x: hidden;
}

/*
* Font style
*/

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Montserrat", sans-serif;
}

p {
    font-family: "Lato", sans-serif;
}

a {
    font-family: "Poppins", sans-serif;
}

/*
* Theme Color
*/

/*
* Navbar
*/

.navbar .navbar-brand {
    font-weight: bold;
    font-family: "Montserrat", sans-serif;
    img {
        width: 30px;
    }
}

#herobox {
    background-color: red;
    background: linear-gradient(
            to bottom,
            rgba(0, 0, 0, 0.2),
            rgba(0, 0, 0, 0.1)
        ),
        url("../images/banner.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: right;
    color: #fff;
    .container {
        padding: 150px 20px;
    }
}

/*
* Sub Pages
*/

.page-hero-box {
    background: linear-gradient(
            to bottom,
            rgba(0, 0, 0, 0.1),
            rgba(0, 0, 0, 0.1)
        ),
        url("../images/bg1.jpg");
    padding: 130px 0;
    color: #fff;
    .breadcrumb {
        margin: 0;
        padding: 0;
        list-style: none;
        .breadcrumb-item {
            + .breadcrumb-item {
                &::before {
                    font-family: "Font Awesome 5 Pro";
                    font-weight: 400;
                    color: #fff;
                    padding-top: 0.33rem;
                    font-size: 10px;
                    content: "\f054" !important;
                }
            }
            a {
                color: #fff;
                text-decoration: none;
            }
            + .active {
                color: #fff;
            }
        }
    }
}

/*
* Footer
*/

footer {
    background-color: rgb(24, 23, 23);
    padding-top: 30px;
    .footer-top {
        padding: 40px 0;
        color: #fff;
        @include breakpoint(sm) {
            padding: 20px;
        }
        .row > div {
            margin-top: 10px;
        }
        .footer-logo {
            font-family: "Montserrat", sans-serif;
            font-weight: bold;
            img {
                width: 40px;
            }
        }
        h4 {
            font-style: 90px;
        }
    }
    .footer-bottom {
        background-color: $primary_color;
        color: #fff;
        padding: 10px;
        p {
            margin: 0;
        }
    }
    .ft-list {
        list-style-type: none;
        margin: 0;
        padding: 0;
        li {
            margin-bottom: 5px;
            a {
                text-decoration: none;
                color: #fff;
                border-bottom: 2px solid transparent;
                font-weight: 200;
                &:hover {
                    color: $primary_color;
                    border-color: $primary_color;
                }
            }
        }
    }
}

.product-card {
    border-radius: 15px;
    overflow: hidden;
    .product-title {
        a {
            text-decoration: none;
            color: #000;
        }
    }
    img {
        height: 300px;
        object-fit: cover;
        @include breakpoint(sm) {
            height: auto;
        }
    }
}

.product-meta {
    .user-avatar {
        img {
            width: 30px;
            height: 30px;
            object-fit: cover;
            border-radius: 45px;
            border: 2px solid #fafafa;
        }
    }
    .user-name {
        a {
            text-decoration: none;
            color: $primary_color;
            &:hover {
                color: $secondary_color;
            }
        }
    }
}

#how-it-works {
    .card {
        padding: 30px 0;
        &:hover {
            background-color: #fafafa;
        }
    }
}

#why-choose-us {
    background: #f8f9fa;
    @include breakpoint(sm) {
        background: transparent;
    }
}

.service-box {
    position: relative;
    @include breakpoint(sm) {
        padding: 20px;
        margin: 5px 0;
        border-radius: 10px;
        background-color: #f5f6fa;
    }
    .icon-content {
        display: inline-block;
        position: absolute;
        margin: 10px 0 0 10px;
        h3 {
            margin: 0;
            padding: 0;
            font-size: 1rem;
            font-weight: bold;
            text-transform: uppercase;
        }
        p {
            margin: 0;
            padding: 0;
            font-size: 14px;
            color: #9e9e9e;
        }
    }
}

.border-b {
    &:after {
        content: " ";
        display: block;
        background-color: $primary_color;
        width: 10%;
        height: 2px;
    }
}

/*
* Testimonial Card
*/

.testimonial-card {
    border-radius: 20px;
    padding: 20px;
    &:hover {
        background-color: $primary_color;
        border-color: transparent;
        color: #fff;
        i {
            color: #fff;
        }
    }
    i {
        font-size: 40px;
        color: $primary_color;
    }
    .user-avatar {
        .avatar {
            width: 50px;
            height: 50px;
        }
    }
    .user-name {
        p {
            margin: 0;
            padding: 0;
            font-weight: bold;
        }
    }
}
/* ... */

